# modern-pandas

./: .gitignore  6_visualization.ipynb  README.md  pyproject.toml
modern-pandas/: 1_intro.ipynb  1_intro.md  1_intro.py  2_method_chaining.ipynb  2_method_chaining.md  2_method_chaining.py  3_indexes.ipynb  3_indexes.md  3_indexes.py  4_performance.ipynb  4_performance.md  4_performance.py  5_tidy_data.ipynb  5_tidy_data.md  5_tidy_data.py  6_visualization.ipynb  6_visualization.md  6_visualization.py  7_timeseries.ipynb  7_timeseries.md  7_timeseries.py  8_Scaling.ipynb  8_Scaling.md  8_Scaling.py  intro.md  intro.py  method_chaining.md  method_chaining.py  modern-1-url.txt  prep.py  utils.py
takeaways/: 1_intro.md  2_method_chaingin.md  3_indexes.md  4_performance.md  5_tidy_data.md  6_visualization.md  7_timeseries.md  8_scaling.md
