[tool.poetry]
name = "modern-pandas"
version = "0.1.0"
description = ""
authors = ["Paulo Costa <pcosta@firstrepublic.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
pandas = "^1.0.3"
seaborn = "^0.10.0"
matplotlib = "^3.2.1"
sklearn = "^0.0"
tables = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
ipykernel = "^5.2.1"
pytest = "^5.4.1"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
